tests/parse-fail/bad_module2.fl.0.exp
Error: bad_module2.fl(4,5): Expected identifier, but got '{'
